fix: panel element initialization and positioning
- Fix TypeError: Cannot read properties of undefined (reading 'style')
- Set position/size directly on element before assigning to this.element
- Add null checks to updatePosition() and updateSize() methods
- Change from transform to left/top positioning for consistency
- Add comprehensive debug logging to Panel constructor
- Add element validation in PanelManager.addPanel()
- Update index.html to use player-panels.html instead of player.html
- Update README.md with new file structure

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -28,15 +28,15 @@
                     </ul>
                 </div>
 
-                <div class="mode-card" onclick="window.location.href='/static/player.html'">
+                <div class="mode-card" onclick="window.location.href='/static/player-panels.html'">
                     <div class="mode-icon">▶️</div>
                     <h2>Player Mode</h2>
-                    <p>Real-time display of lyrics and chords for live performances</p>
+                    <p>Professional panel-based player for live performances</p>
                     <ul>
-                        <li>Synchronized lyrics display</li>
-                        <li>Chord progression</li>
-                        <li>BPM & beat counter</li>
-                        <li>Transpose on-the-fly</li>
+                        <li>Customizable layout</li>
+                        <li>Multi-window support</li>
+                        <li>Drag & drop panels</li>
+                        <li>Real-time sync</li>
                     </ul>
                 </div>
 
@@ -138,7 +138,7 @@
         }
 
         function openInPlayer(songId) {
-            window.location.href = `/static/player.html?song=${songId}`;
+            window.location.href = `/static/player-panels.html?song=${songId}`;
         }
 
         function formatTime(seconds) {
