fix: z-index hierarchy preventing panel interaction
CRITICAL BUG FIX: Panels were not interactive due to wrong z-index layering

Changes:
- Increase panel-container z-index from 1 to 10
- Set base panel z-index to 100 (above container)
- Set dragging/resizing panel z-index to 500
- Set header/footer z-index to 1000 (above panels but fixed)
- Set layout controls z-index to 1001 (above everything)
- Add pointer-events: auto to panels for explicit clickability
- Update Panel.getMaxZIndex() to start from minimum 100
- Reduce header title font size (1.25rem) to prevent visual clutter
- Add CSS styles for player-header and player-controls
- Add background colors to header/footer for proper layering

Z-Index Hierarchy (corrected):
- 1001: Layout controls sidebar
- 1000: Header & Footer (fixed UI)
- 500: Active panel (dragging/resizing)
- 100-499: Normal panels
- 10: Panel container
- 0: Background elements

--- a/src/frontend/player-panels.html
+++ b/src/frontend/player-panels.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <!-- Top Bar -->
-    <header class="player-header" style="position: fixed; top: 0; left: 0; right: 0; height: 60px; z-index: 999;">
+    <header class="player-header" style="position: fixed; top: 0; left: 0; right: 0; height: 60px; z-index: 1000; background: var(--bg-secondary); border-bottom: 2px solid var(--border-color);">
         <div class="header-left">
             <button onclick="window.location.href='/static/index.html'" class="btn-back">← Back</button>
             <div class="song-info">
-                <h1 id="songTitle">No Song Loaded</h1>
-                <p id="songArtist">-</p>
+                <h1 id="songTitle" style="font-size: 1.25rem; margin: 0;">No Song Loaded</h1>
+                <p id="songArtist" style="font-size: 0.875rem; margin: 0; color: var(--text-secondary);">-</p>
             </div>
         </div>
         
@@ -107,7 +107,7 @@
     </div>
 
     <!-- Control Bar -->
-    <footer class="player-controls" style="position: fixed; bottom: 0; left: 0; right: 0; height: 80px; z-index: 999;">
+    <footer class="player-controls" style="position: fixed; bottom: 0; left: 0; right: 0; height: 80px; z-index: 1000; background: var(--bg-secondary); border-top: 2px solid var(--border-color);">
         <div class="controls-left">
             <button onclick="skipBackward()" class="btn-control">⏮</button>
             <button onclick="togglePlay()" id="playPauseBtn" class="btn-control btn-play">▶️</button>
