feat: add setlist manager UI for gig/show management
- Create setlists.html for managing gigs and shows
- Add setlists.css with professional card-based layout
- Implement setlists.js with full CRUD functionality
- Update index.html to link to setlist manager
- Features:
  * Create/edit/delete setlists
  * Add songs to setlist with drag & drop ordering
  * Configure auto-advance, loop, shuffle settings
  * Set gap between songs with countdown
  * Tag setlists (venue, genre, etc.)
  * Load setlist directly to player
  * Search and filter available songs
  * Real-time duration calculation
  * Responsive design for mobile/tablet
- Backend API already exists (models + routes)
- Integrates with existing QueueManager system

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -40,15 +40,15 @@
                     </ul>
                 </div>
 
-                <div class="mode-card" onclick="showLibrary()">
-                    <div class="mode-icon">📚</div>
-                    <h2>Song Library</h2>
-                    <p>Browse and manage your song collection</p>
+                <div class="mode-card" onclick="window.location.href='/static/setlists.html'">
+                    <div class="mode-icon">🎸</div>
+                    <h2>Setlists</h2>
+                    <p>Create and manage setlists for gigs and shows</p>
                     <ul>
-                        <li>View all songs</li>
-                        <li>Search and filter</li>
-                        <li>Quick access</li>
-                        <li>Manage files</li>
+                        <li>Create setlists</li>
+                        <li>Auto-advance songs</li>
+                        <li>Track progress</li>
+                        <li>Save for venues</li>
                     </ul>
                 </div>
             </div>
