feat: add setlist panel to player for live performance tracking
- Add SetlistPanel class to panels.js
- Display current setlist with song list and progress
- Show current playing song highlighted
- Add Previous/Next song controls
- Add jump to song functionality
- Display elapsed time and remaining songs
- Add WebSocket handlers for setlist updates:
  * setlist_update - Update panel with current state
  * gap_countdown - Show countdown between songs
  * setlist_finished - Notify when setlist completes
- Add setlist panel toggle to player-panels.html
- Add comprehensive CSS styling for setlist panel
- Integrate with QueueManager backend
- Add to default layout preset
- Support for auto-advance, loop, shuffle modes
- Real-time progress tracking during live performance

--- a/src/frontend/test-panels.html
+++ b/src/frontend/test-panels.html
@@ -107,6 +107,10 @@
                 <input type="checkbox" id="toggle-transpose" onchange="togglePanel('transpose', this.checked)">
                 <label for="toggle-transpose">🎹 Transpose</label>
             </div>
+            <div class="panel-toggle">
+                <input type="checkbox" id="toggle-setlist" onchange="togglePanel('setlist', this.checked)">
+                <label for="toggle-setlist">🎸 Setlist</label>
+            </div>
         </div>
         
         <div class="layout-actions">
